# goit-web-hw-14

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: conf.py
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
migrations/: env.py
migrations/versions/: 3e55f2255f2b_avatar.py  a8ed9c148ebc_add_role.py  c524a7fd3716_init.py
src/app_contacts/: repository_contacts.py  routes_contacts.py  schemas_contact.py
src/app_index/: routes_index.py
src/app_users/: repository_users.py  routes_auth.py  routes_user.py  services_auth.py  services_cache.py  services_email.py  services_middleware.py  services_roles.py  shemas_user.py
src/app_users/templates/: pass_email.html
src/config/: config.py  messages.py
src/database/: db.py
src/entity/: models.py
tests/: conftest.py  test_router_auth.py  test_router_contacts.py  test_router_user.py  test_routes_index.py  test_unit_repository_contacts.py  test_unit_repository_users.py
