[tool.poetry]
name = "goit-web-hw-14"
version = "0.1.0"
description = ""
authors = ["R.Anatolii <tv.weplay@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
python-decouple = "^3.8"
sqlalchemy = "^2.0.36"
alembic = "^1.13.3"
asyncpg = "^0.30.0"
pydantic = {extras = ["settings"], version = "^2.9.2"}
libgravatar = "^1.0.4"
python-jose = "^3.3.0"
python-multipart = "^0.0.17"
bcrypt = "4.0.1"
passlib = "1.7.4"
fastapi-limiter = "^0.1.6"
faker = "^33.0.0"
cloudinary = "^1.41.0"
fastapi-mail = "^1.4.1"
aiomysql = "^0.2.0"
sphinx = "^8.1.3"
pytest = "^8.3.3"
psycopg2 = "^2.9.10"


[tool.poetry.group.dev.dependencies]
sphinx = "^8.1.3"


[tool.poetry.group.test.dependencies]
aiosqlite = "^0.20.0"
pytest-asyncio = "^0.24.0"
httpx = "^0.27.2"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--doctest-modules"
testpaths =["tests",]
pythonpath="."